tests/format/misc/errors/js/import-assertions/invalid-module-escape.mjs
import modul\u0065 foo from "./module.wasm";
